--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Intelligence de l'eau</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Intelligence de l'eau</title>
+
+  <!-- PWA -->
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#2563eb">
+  <link rel="icon" href="icon-192.png">
 </head>
+
 <body>
   <h1>💧 Intelligence de l'eau</h1>
-  <p>Application mobile d'analyse de l'eau (offline)</p>
+  <p>Application mobile d'analyse de l'eau (hors ligne)</p>
 
   <button onclick="alert('Scan à venir')">
     Scanner une bouteille
