--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
   <button onclick="alert('Scan à venir')">
     Scanner une bouteille
   </button>
+<script>
+if ("serviceWorker" in navigator) {
+  window.addEventListener("load", () => {
+    navigator.serviceWorker.register("./sw.js")
+      .then(reg => console.log("Service Worker enregistré", reg))
+      .catch(err => console.error("Erreur SW", err));
+  });
+}
+</script>
 </body>
 </html>
